--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,23 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
+
 <body>
-  <app-root>Loading...</app-root>
+	<!-- Menu Bar
+	<div class="ui menu">
+		<div class="ui container">
+			<div class="header item borderless">
+				<h1 class="ui header">
+					Jeff Marcus
+				</h1>
+			</div>
+		</div>
+	</div>
+  -->
+	<div class="ui main text container">
+		<app-root>Loading ...</app-root>
+	</div>
 </body>
 </html>
