--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Jdenekat</title>
@@ -7,13 +8,14 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script async="" src="https://www.google-analytics.com/analytics.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-	<!-- Menu Bar
+  <!-- Menu Bar
 	<div class="ui menu">
 		<div class="ui container">
 			<div class="header item borderless">
@@ -24,8 +26,20 @@
 		</div>
 	</div>
   -->
-	<div class="ui main text container">
-		<app-root>Loading ...</app-root>
-	</div>
+  <div class="ui main text container">
+    <app-root>Loading ...</app-root>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-97203504-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'UA-97203504-1');
+
+    </script>
+  </div>
 </body>
+
 </html>
